Closed Bug 565953 Opened 16 years ago Closed 14 years ago

Intermittent failure in test_pluginstream_err.html | test frame has unexpected content - got "NPP_StreamAsFile calledpass", expected "pass" and plugin reported an error - got "NPP_StreamAsFile calledpass", expected "pass"

Categories

(Core Graveyard :: Plug-ins, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: philor, Assigned: benjamin)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1273849536.1273849929.1312.gz Linux mozilla-central opt test mochitests-5/5 on 2010/05/14 08:05:36 s: moz2-linux-slave27 476 ERROR TEST-UNEXPECTED-FAIL | /tests/modules/plugin/test/test_pluginstream_err.html | test frame has unexpected content - got "NPP_StreamAsFile calledpass", expected "pass" 477 ERROR TEST-UNEXPECTED-FAIL | /tests/modules/plugin/test/test_pluginstream_err.html | plugin reported an error - got "NPP_StreamAsFile calledpass", expected "pass"
OS: Linux → All
Josh, please try this patch in your slow VM, I expect it to fix the problem (which is a real code issue and not a test issue) although I cannot reproduce here so I'm not 100% sure.
Assignee: nobody → benjamin
Status: NEW → ASSIGNED
Attachment #575536 - Flags: review?(joshmoz)
Comment on attachment 575536 [details] [diff] [review] Fix asfile delivery, rev. 1 Review of attachment 575536 [details] [diff] [review]: ----------------------------------------------------------------- This does seem to fix the problem, thanks!
Attachment #575536 - Flags: review?(joshmoz) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [orange]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: