Bug 565953 - Intermittent failure in test_pluginstream_err.html because we're sometimes delivering NPP_StreamAsFile even after NPP_Write has failed, which is probably a violation of NPAPI expectations, although this behavior isn't actually specced out explicitly anywhere. r=josh