dom/plugins/ipc/BrowserStreamChild.cpp
@@ -249,8 +249,9 @@ BrowserStreamChild::Deliver()
   // asynchronously).  Doing this resolves bug 687610, bug 670036 and possibly
   // also other bugs.
   if (mStreamAsFilePending) {
-    mInstance->mPluginIface->asfile(&mInstance->mData, &mStream,
-                                    mStreamAsFileName.get());
+    if (mStreamStatus == kStreamOpen)
+      mInstance->mPluginIface->asfile(&mInstance->mData, &mStream,
+                                      mStreamAsFileName.get());
     mStreamAsFilePending = false;
   }
 
